Fixed bug that broke the map page when a listing marker was clicked, when on mobile

--- a/src/components/pages/listingOverlayPage/mobile/mobileListingOverlayPage.module.scss
+++ b/src/components/pages/listingOverlayPage/mobile/mobileListingOverlayPage.module.scss
@@ -72,9 +72,10 @@
 }
 
 .contents {
-  height: 100dvh;
+  margin-top: var(--height-navbar);
+  height: calc(100dvh - var(--height-navbar));
   width: 100dvw;
-  overflow: scroll;
+  overflow-y: scroll;
   background: var(--color-bg-primary);
 }
 
